--- a/src/app/dialog/dialog.component.scss
+++ b/src/app/dialog/dialog.component.scss
@@ -1,3 +1,24 @@
 mat-form-field {
   width: 100%;
 }
+
+#preventivo mat-form-field {
+  max-width: 180px;
+}
+
+mat-label {
+  font-size: 14px;
+}
+
+form {
+  padding: 10px 0;
+}
+
+form div[fxLayout] {
+  font-size: 12px;
+}
+
+form div[fxLayout] input,
+form div[fxLayout] mat-select {
+  font-size: 14px;
+}
