--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -45,7 +45,7 @@
         </mat-form-field>
         <mat-form-field appearance="outline" fxFlex="5" floatLabel="always">
           <mat-label>Sezione</mat-label>
-          <mat-select  formControlName="sezione">
+          <mat-select formControlName="sezione">
             <mat-option value="N">N</mat-option>
             <mat-option value="P">P</mat-option>
             <mat-option value="I">I</mat-option>
@@ -142,7 +142,7 @@
           <mat-form-field appearance="outline" floatLabel="always">
             <mat-label>Iscrizione</mat-label>
             <input
-            min="0"
+              min="0"
               matInput
               type="number"
               placeholder="0"
@@ -153,7 +153,7 @@
           <mat-form-field appearance="outline" floatLabel="always">
             <mat-label>Bolli Fatture</mat-label>
             <input
-            min="0"
+              min="0"
               matInput
               type="number"
               placeholder="0"
@@ -217,6 +217,12 @@
             <span matPrefix>€&nbsp;</span>
           </mat-form-field>
         </div>
+        <div fxLayout="row">
+          <mat-form-field appearance="outline" fxFlex="50">
+            <mat-label>Note</mat-label>
+            <textarea matInput formControlName="note" rows="6"></textarea>
+          </mat-form-field>
+        </div>
       </mat-card-content>
     </mat-card>
   </form>
@@ -225,7 +231,7 @@
 <div mat-dialog-action [align]="'end'">
   <button mat-raised-button color="warn" mat-dialog-close>Chiudi</button>
   <button
-    style="margin-left: 8px;"
+    style="margin-left: 8px"
     mat-raised-button
     color="primary"
     (click)="addOrUpdateKid()"
