--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -8,11 +8,11 @@
       <div fxLayout="row" fxLayoutGap="15px">
         <mat-form-field appearance="outline" fxFlex="15">
           <mat-label>Nome</mat-label>
-          <input matInput placeholder="Nome" formControlName="nome" />
+          <input matInput formControlName="nome" />
         </mat-form-field>
         <mat-form-field appearance="outline" fxFlex="15">
           <mat-label>Cognome</mat-label>
-          <input matInput placeholder="Cognome" formControlName="cognome" />
+          <input matInput formControlName="cognome" />
         </mat-form-field>
         <mat-form-field appearance="outline" fxFlex="10">
           <mat-label>Data di Nascita</mat-label>
@@ -29,19 +29,15 @@
         </mat-form-field>
         <mat-form-field appearance="outline" fxFlex="15">
           <mat-label>Luogo di Nascita</mat-label>
-          <input
-            matInput
-            placeholder="Luogo di Nascita"
-            formControlName="luogoNascita"
-          />
+          <input matInput formControlName="luogoNascita" />
         </mat-form-field>
         <mat-form-field appearance="outline" fxFlex="15">
           <mat-label>Codice Fiscale</mat-label>
-          <input matInput placeholder="Codice Fiscale" formControlName="cf" />
+          <input matInput formControlName="cf" />
         </mat-form-field>
         <mat-form-field appearance="outline" fxFlex="fill">
           <mat-label>Indirizzo</mat-label>
-          <input matInput placeholder="Indirizzo" formControlName="indirizzo" />
+          <input matInput formControlName="indirizzo" />
         </mat-form-field>
         <mat-form-field appearance="outline" fxFlex="5" floatLabel="always">
           <mat-label>Sezione</mat-label>
@@ -55,69 +51,37 @@
       <div fxLayout="row" fxLayoutGap="15px">
         <mat-form-field appearance="outline">
           <mat-label>Nome Padre</mat-label>
-          <input
-            matInput
-            placeholder="Nome Padre"
-            formControlName="nomePadre"
-          />
+          <input matInput formControlName="nomePadre" />
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Telefono Padre</mat-label>
-          <input
-            matInput
-            placeholder="Telefono Padre"
-            formControlName="telefonoPadre"
-          />
+          <input matInput formControlName="telefonoPadre" />
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Codice Fiscale Padre</mat-label>
-          <input
-            matInput
-            placeholder="Codice Fiscale Padre"
-            formControlName="cfPadre"
-          />
+          <input matInput formControlName="cfPadre" />
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Email Padre</mat-label>
-          <input
-            matInput
-            placeholder="Email Padre"
-            formControlName="emailPadre"
-          />
+          <input matInput formControlName="emailPadre" />
         </mat-form-field>
       </div>
       <div fxLayout="row" fxLayoutGap="15px">
         <mat-form-field appearance="outline">
           <mat-label>Nome Madre</mat-label>
-          <input
-            matInput
-            placeholder="Nome Madre"
-            formControlName="nomeMadre"
-          />
+          <input matInput formControlName="nomeMadre" />
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Telefono Madre</mat-label>
-          <input
-            matInput
-            placeholder="Telefono Madre"
-            formControlName="telefonoMadre"
-          />
+          <input matInput formControlName="telefonoMadre" />
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Codice Fiscale Madre</mat-label>
-          <input
-            matInput
-            placeholder="Codice Fiscale Madre"
-            formControlName="cfMadre"
-          />
+          <input matInput formControlName="cfMadre" />
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Email Madre</mat-label>
-          <input
-            matInput
-            placeholder="Email Madre"
-            formControlName="emailMadre"
-          />
+          <input matInput formControlName="emailMadre" />
         </mat-form-field>
       </div>
       <div fxLayout="row" fxLayoutGap="15px">
