--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -27,18 +27,38 @@
   </button> -->
 </mat-toolbar>
 <div class="container">
-  <div style="margin-top: 10px;">
-    <mat-form-field appearance="standard">
-      <mat-label>Cerca Bambino per Cognome</mat-label>
-      <input
-        matInput
-        (keyup)="applyFilter($event)"
-        placeholder=""
-        #input
-        autocomplete="off"
-      />
-    </mat-form-field>
-
+  <div style="margin-top: 10px">
+    <form [formGroup]="filterForm">
+      <div fxLayout="row" fxLayoutGap="400px">
+        <mat-form-field appearance="standard">
+          <mat-label>Cerca Bambino per Cognome</mat-label>
+          <!-- <input
+            matInput
+            (keyup)="applyFilter($event)"
+            placeholder=""
+            #input
+            autocomplete="off"
+            formControlName="surname"
+          /> -->
+          <input
+            matInput
+            placeholder=""
+            #input
+            autocomplete="off"
+            formControlName="surname"
+          />
+        </mat-form-field>
+        <mat-form-field appearance="outline" floatLabel="always">
+          <mat-label>Filtra per Sezione</mat-label>
+          <mat-select formControlName="section">
+            <mat-option value="">Tutte</mat-option>
+            <mat-option value="N">N</mat-option>
+            <mat-option value="P">P</mat-option>
+            <mat-option value="I">I</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </form>
     <div class="mat-elevation-z8">
       <table
         mat-table
@@ -79,7 +99,7 @@
             Iscrizione
           </th>
           <td mat-cell *matCellDef="let row">
-            {{ row.iscrizione | currency: 'EUR':'symbol':'1.2-2':'it' }}
+            {{ row.iscrizione | currency: "EUR":"symbol":"1.2-2":"it" }}
           </td>
         </ng-container>
 
@@ -88,7 +108,7 @@
             Retta Mensile
           </th>
           <td mat-cell *matCellDef="let row">
-            {{ row.rettaMensile | currency: 'EUR':'symbol':'1.2-2':'it' }}
+            {{ row.rettaMensile | currency: "EUR":"symbol":"1.2-2":"it" }}
           </td>
         </ng-container>
 
@@ -97,7 +117,7 @@
             Spese Varie
           </th>
           <td mat-cell *matCellDef="let row">
-            {{ row.speseVarie | currency: 'EUR':'symbol':'1.2-2':'it' }}
+            {{ row.speseVarie | currency: "EUR":"symbol":"1.2-2":"it" }}
           </td>
         </ng-container>
 
@@ -106,7 +126,7 @@
             Attività Didattiche
           </th>
           <td mat-cell *matCellDef="let row">
-            {{ row.attivita | currency: 'EUR':'symbol':'1.2-2':'it' }}
+            {{ row.attivita | currency: "EUR":"symbol":"1.2-2":"it" }}
           </td>
         </ng-container>
 
@@ -115,7 +135,7 @@
             Bolli Fatture
           </th>
           <td mat-cell *matCellDef="let row">
-            {{ row.bolliFatture | currency: 'EUR':'symbol':'1.2-2':'it' }}
+            {{ row.bolliFatture | currency: "EUR":"symbol":"1.2-2":"it" }}
           </td>
         </ng-container>
 
@@ -147,7 +167,7 @@
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell" colspan="4">
-            Nessun risultato per "{{ input.value }}"
+            Nessun risultato
           </td>
         </tr>
       </table>
